// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lib/supafolio/Supafolio.book should return a correct Book for 9780814711774 1`] = `
Book {
  "book": Object {
    "assets": Array [
      Object {
        "asset": Object {
          "description": null,
          "embed": null,
          "height": 648,
          "id": "1207",
          "name": "648-H-9780814711774.jpg",
          "order": 1,
          "path": "https://nyu-opensquare.imgix.net/missing-cover.jpg",
          "schedule": "2020-06-23 19:30:51",
          "size": null,
          "source": "s3-image-import",
          "sub_type": "book-cover",
          "type": "image",
          "unique": "a8914ada8bad55448df5726d885a522d",
          "width": null,
        },
        "asset_id": "1207",
        "id": "1207-393",
      },
      Object {
        "asset": Object {
          "description": null,
          "embed": null,
          "height": null,
          "id": "1165",
          "name": "145-W-9780814711774.jpg",
          "order": 1,
          "path": "https://nyu-opensquare.imgix.net/missing-cover.jpg",
          "schedule": "2020-06-23 19:30:51",
          "size": null,
          "source": "s3-image-import",
          "sub_type": "book-cover",
          "type": "image",
          "unique": "dd73da987b9eb946a2c159863e588657",
          "width": 145,
        },
        "asset_id": "1165",
        "id": "1165-393",
      },
      Object {
        "asset": Object {
          "description": null,
          "embed": null,
          "height": null,
          "id": "1186",
          "name": "298-W-9780814711774.jpg",
          "order": 1,
          "path": "https://nyu-opensquare.imgix.net/missing-cover.jpg",
          "schedule": "2020-06-23 19:30:51",
          "size": null,
          "source": "s3-image-import",
          "sub_type": "book-cover",
          "type": "image",
          "unique": "93431ff324b214bf02464c601ab5336a",
          "width": 298,
        },
        "asset_id": "1186",
        "id": "1186-393",
      },
    ],
    "availability": 4,
    "availability_status": "Active",
    "awards": Array [],
    "categories": Array [
      Object {
        "category": Object {
          "code": "NYUWGS000",
          "code_3": "NYU",
          "code_6": "NYUWGS",
          "name": "Women's & Gender Studies",
          "seo_name": "NYUWGS",
          "type": "nyuos-subjects",
        },
        "primary": false,
      },
      Object {
        "category": Object {
          "code": "NYULLS000",
          "code_3": "NYU",
          "code_6": "NYULLS",
          "name": "Literature & Literary Studies",
          "seo_name": "NYULLS",
          "type": "nyuos-subjects",
        },
        "primary": false,
      },
      Object {
        "category": Object {
          "code": "NYUS00000",
          "code_3": "NYU",
          "code_6": "NYUS00",
          "name": "Sociology",
          "seo_name": "NYUS",
          "type": "nyuos-subjects",
        },
        "primary": false,
      },
    ],
    "cd_run_time": "0:0:0",
    "contributors": Array [
      Object {
        "contributor": Object {
          "bio": null,
          "bio_short": null,
          "contributor_id": 100042,
          "custom": null,
          "deceased": false,
          "featured": false,
          "first": "Natalie Clifford",
          "hide": false,
          "image": null,
          "last": "Barney",
          "locale": null,
          "name": "Natalie Clifford Barney",
          "on_tour": false,
          "reference_id": null,
          "role": "A01",
          "sensitivity": false,
          "seo": "natalie-clifford-barney",
        },
        "contributor_id": 100042,
        "note": "Natalie Clifford Barney",
        "order": 1,
        "role": Object {
          "code": "A01",
          "name": "By (author)",
        },
        "role_id": "A01",
      },
      Object {
        "contributor": Object {
          "bio": "Translator <b>John Spalding Gatton</b> is Assistant Professor in the Department of English at Bellarmine College.",
          "bio_short": null,
          "contributor_id": 100043,
          "custom": null,
          "deceased": false,
          "featured": false,
          "first": "John Spalding",
          "hide": false,
          "image": null,
          "last": "Gatton",
          "locale": null,
          "name": "John Spalding Gatton",
          "on_tour": false,
          "reference_id": null,
          "role": "B06",
          "sensitivity": false,
          "seo": "john-spalding-gatton",
        },
        "contributor_id": 100043,
        "note": "",
        "order": 2,
        "role": Object {
          "code": "B06",
          "name": "Translated by",
        },
        "role_id": "B06",
      },
    ],
    "custom": Object {
      "cs_title_group": "9780814711774",
      "edition_isbn": "9780814711774",
      "hi_res_images": false,
      "language": "eng",
      "license_link": "https://creativecommons.org/licenses/by-nc-sa/4.0/",
      "license_name": "Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License",
      "open_access_is_downloadable": false,
      "open_access_series": false,
      "permanent_url": "https://doi.org/10.18574/nyu/9780814725078.001.0001",
      "scheduled_date": "05/29/2014",
      "video": false,
    },
    "date": Object {
      "date": "1992-06-01 00:00:00.000000",
      "timezone": "America/New_York",
      "timezone_type": 3,
    },
    "description": "<p>In this book, Barney explores her family tree, chronicles her friendships and associations through reprinted correspondence and recreated conversations, and evokes the golden age of her salon in  gallery of literary portraits.</p>",
    "division": null,
    "edition": "",
    "featured": false,
    "formats": Array [
      Object {
        "date": Object {
          "date": "1992-06-01 00:00:00.000000",
          "timezone": "America/New_York",
          "timezone_type": 3,
        },
        "detail": "Print PDF",
        "edition": "",
        "format": Object {
          "code": "BB",
          "name": "Hardcover",
        },
        "format_id": "BB",
        "id": "BB393",
        "isbn": "9780814711774",
        "primary_format": true,
        "product_id": 393,
        "seo_link": "adventures-of-the-mind",
        "title_id": "82c52cf3f3159afd0078fd9096d43bb4",
      },
      Object {
        "date": Object {
          "date": "1992-06-01 00:00:00.000000",
          "timezone": "America/New_York",
          "timezone_type": 3,
        },
        "detail": "",
        "edition": "",
        "format": Object {
          "code": "DG",
          "name": "eBook",
        },
        "format_id": "DG",
        "id": "DG400",
        "isbn": "9780814787281",
        "primary_format": false,
        "product_id": 400,
        "seo_link": "adventures-of-the-mind",
        "title_id": "82c52cf3f3159afd0078fd9096d43bb4",
      },
      Object {
        "date": Object {
          "date": "1992-06-01 00:00:00.000000",
          "timezone": "America/New_York",
          "timezone_type": 3,
        },
        "detail": "",
        "edition": "",
        "format": Object {
          "code": "DG",
          "name": "eBook",
        },
        "format_id": "DG",
        "id": "DG401",
        "isbn": "9780814725078",
        "primary_format": false,
        "product_id": 401,
        "seo_link": "adventures-of-the-mind",
        "title_id": "82c52cf3f3159afd0078fd9096d43bb4",
      },
    ],
    "hide": 0,
    "illustrations_note": "",
    "image": "https://nyu-opensquare.imgix.net/missing-cover.jpg",
    "import_notes": "",
    "imprint": Object {
      "description": null,
      "description_short": null,
      "hide": false,
      "name": "NYU Press",
      "seo_name": "nyu-press",
    },
    "initial_print_run": null,
    "isbn10": "0814711774",
    "isbn13": "9780814711774",
    "keywords": "",
    "levels": Array [],
    "pages": 308,
    "prices": Array [
      Object {
        "amount": "74.00",
        "discount": null,
        "locale": "GBP",
        "promo_start": Array [],
        "promo_stop": Array [],
        "saving": null,
      },
      Object {
        "amount": "89.00",
        "discount": null,
        "locale": "USD",
        "promo_start": Object {
          "date": "2019-03-31 00:00:00.000000",
          "timezone": "America/New_York",
          "timezone_type": 3,
        },
        "promo_stop": Array [],
        "saving": null,
      },
    ],
    "primary_format": true,
    "product_id": 393,
    "publisher": Object {
      "name": "NYU Press",
      "seo_name": "nyu-press",
    },
    "rating": null,
    "reference_id": null,
    "retailers": null,
    "reviews": Array [],
    "sale_date": Object {
      "date": "1992-06-01 00:00:00.000000",
      "timezone": "America/New_York",
      "timezone_type": 3,
    },
    "scheduled": Array [],
    "search_weight": 430,
    "season": null,
    "seo": "adventures-of-the-mind",
    "series": Array [
      Object {
        "number_in_series": "0",
        "series": Object {
          "description": "",
          "name": "The Cutting Edge: Lesbian Life and Literature Series",
          "seo_name": "the-cutting-edge-lesbian-life-and-literature-series",
        },
      },
    ],
    "sort_date": 707371200,
    "stock": null,
    "subtitle": "The Memoirs of Natalie Clifford Barney",
    "summary": "In this book, Barney explores her family tree, chronicles her friendships and associations through reprinted correspondence and recreated conversations, and evokes the golden age of her salon in...",
    "tagline": null,
    "territories": null,
    "title": "Adventures of the Mind",
    "title_id": "82c52cf3f3159afd0078fd9096d43bb4",
    "title_without_prefix": "Adventures of the Mind",
    "trim": Object {
      "depth": null,
      "height": "9.000",
      "unit": "in",
      "weight": "0.880",
      "weight_unit": "lb",
      "width": "6.000",
    },
    "type": "Nonfiction",
  },
  "supafolioApiResponse": Object {
    "data": Object {
      "book": Array [
        Object {
          "assets": Array [
            Object {
              "asset": Object {
                "description": null,
                "embed": null,
                "height": 648,
                "id": "1207",
                "name": "648-H-9780814711774.jpg",
                "order": 1,
                "path": "https://nyu-opensquare.imgix.net/missing-cover.jpg",
                "schedule": "2020-06-23 19:30:51",
                "size": null,
                "source": "s3-image-import",
                "sub_type": "book-cover",
                "type": "image",
                "unique": "a8914ada8bad55448df5726d885a522d",
                "width": null,
              },
              "asset_id": "1207",
              "id": "1207-393",
            },
            Object {
              "asset": Object {
                "description": null,
                "embed": null,
                "height": null,
                "id": "1165",
                "name": "145-W-9780814711774.jpg",
                "order": 1,
                "path": "https://nyu-opensquare.imgix.net/missing-cover.jpg",
                "schedule": "2020-06-23 19:30:51",
                "size": null,
                "source": "s3-image-import",
                "sub_type": "book-cover",
                "type": "image",
                "unique": "dd73da987b9eb946a2c159863e588657",
                "width": 145,
              },
              "asset_id": "1165",
              "id": "1165-393",
            },
            Object {
              "asset": Object {
                "description": null,
                "embed": null,
                "height": null,
                "id": "1186",
                "name": "298-W-9780814711774.jpg",
                "order": 1,
                "path": "https://nyu-opensquare.imgix.net/missing-cover.jpg",
                "schedule": "2020-06-23 19:30:51",
                "size": null,
                "source": "s3-image-import",
                "sub_type": "book-cover",
                "type": "image",
                "unique": "93431ff324b214bf02464c601ab5336a",
                "width": 298,
              },
              "asset_id": "1186",
              "id": "1186-393",
            },
          ],
          "availability": 4,
          "availability_status": "Active",
          "awards": Array [],
          "categories": Array [
            Object {
              "category": Object {
                "code": "NYUWGS000",
                "code_3": "NYU",
                "code_6": "NYUWGS",
                "name": "Women's & Gender Studies",
                "seo_name": "NYUWGS",
                "type": "nyuos-subjects",
              },
              "primary": false,
            },
            Object {
              "category": Object {
                "code": "NYULLS000",
                "code_3": "NYU",
                "code_6": "NYULLS",
                "name": "Literature & Literary Studies",
                "seo_name": "NYULLS",
                "type": "nyuos-subjects",
              },
              "primary": false,
            },
            Object {
              "category": Object {
                "code": "NYUS00000",
                "code_3": "NYU",
                "code_6": "NYUS00",
                "name": "Sociology",
                "seo_name": "NYUS",
                "type": "nyuos-subjects",
              },
              "primary": false,
            },
          ],
          "cd_run_time": "0:0:0",
          "contributors": Array [
            Object {
              "contributor": Object {
                "bio": null,
                "bio_short": null,
                "contributor_id": 100042,
                "custom": null,
                "deceased": false,
                "featured": false,
                "first": "Natalie Clifford",
                "hide": false,
                "image": null,
                "last": "Barney",
                "locale": null,
                "name": "Natalie Clifford Barney",
                "on_tour": false,
                "reference_id": null,
                "role": "A01",
                "sensitivity": false,
                "seo": "natalie-clifford-barney",
              },
              "contributor_id": 100042,
              "note": "Natalie Clifford Barney",
              "order": 1,
              "role": Object {
                "code": "A01",
                "name": "By (author)",
              },
              "role_id": "A01",
            },
            Object {
              "contributor": Object {
                "bio": "Translator <b>John Spalding Gatton</b> is Assistant Professor in the Department of English at Bellarmine College.",
                "bio_short": null,
                "contributor_id": 100043,
                "custom": null,
                "deceased": false,
                "featured": false,
                "first": "John Spalding",
                "hide": false,
                "image": null,
                "last": "Gatton",
                "locale": null,
                "name": "John Spalding Gatton",
                "on_tour": false,
                "reference_id": null,
                "role": "B06",
                "sensitivity": false,
                "seo": "john-spalding-gatton",
              },
              "contributor_id": 100043,
              "note": "",
              "order": 2,
              "role": Object {
                "code": "B06",
                "name": "Translated by",
              },
              "role_id": "B06",
            },
          ],
          "custom": Object {
            "cs_title_group": "9780814711774",
            "edition_isbn": "9780814711774",
            "hi_res_images": false,
            "language": "eng",
            "license_link": "https://creativecommons.org/licenses/by-nc-sa/4.0/",
            "license_name": "Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License",
            "open_access_is_downloadable": false,
            "open_access_series": false,
            "permanent_url": "https://doi.org/10.18574/nyu/9780814725078.001.0001",
            "scheduled_date": "05/29/2014",
            "video": false,
          },
          "date": Object {
            "date": "1992-06-01 00:00:00.000000",
            "timezone": "America/New_York",
            "timezone_type": 3,
          },
          "description": "<p>In this book, Barney explores her family tree, chronicles her friendships and associations through reprinted correspondence and recreated conversations, and evokes the golden age of her salon in  gallery of literary portraits.</p>",
          "division": null,
          "edition": "",
          "featured": false,
          "formats": Array [
            Object {
              "date": Object {
                "date": "1992-06-01 00:00:00.000000",
                "timezone": "America/New_York",
                "timezone_type": 3,
              },
              "detail": "Print PDF",
              "edition": "",
              "format": Object {
                "code": "BB",
                "name": "Hardcover",
              },
              "format_id": "BB",
              "id": "BB393",
              "isbn": "9780814711774",
              "primary_format": true,
              "product_id": 393,
              "seo_link": "adventures-of-the-mind",
              "title_id": "82c52cf3f3159afd0078fd9096d43bb4",
            },
            Object {
              "date": Object {
                "date": "1992-06-01 00:00:00.000000",
                "timezone": "America/New_York",
                "timezone_type": 3,
              },
              "detail": "",
              "edition": "",
              "format": Object {
                "code": "DG",
                "name": "eBook",
              },
              "format_id": "DG",
              "id": "DG400",
              "isbn": "9780814787281",
              "primary_format": false,
              "product_id": 400,
              "seo_link": "adventures-of-the-mind",
              "title_id": "82c52cf3f3159afd0078fd9096d43bb4",
            },
            Object {
              "date": Object {
                "date": "1992-06-01 00:00:00.000000",
                "timezone": "America/New_York",
                "timezone_type": 3,
              },
              "detail": "",
              "edition": "",
              "format": Object {
                "code": "DG",
                "name": "eBook",
              },
              "format_id": "DG",
              "id": "DG401",
              "isbn": "9780814725078",
              "primary_format": false,
              "product_id": 401,
              "seo_link": "adventures-of-the-mind",
              "title_id": "82c52cf3f3159afd0078fd9096d43bb4",
            },
          ],
          "hide": 0,
          "illustrations_note": "",
          "image": "https://nyu-opensquare.imgix.net/missing-cover.jpg",
          "import_notes": "",
          "imprint": Object {
            "description": null,
            "description_short": null,
            "hide": false,
            "name": "NYU Press",
            "seo_name": "nyu-press",
          },
          "initial_print_run": null,
          "isbn10": "0814711774",
          "isbn13": "9780814711774",
          "keywords": "",
          "levels": Array [],
          "pages": 308,
          "prices": Array [
            Object {
              "amount": "74.00",
              "discount": null,
              "locale": "GBP",
              "promo_start": Array [],
              "promo_stop": Array [],
              "saving": null,
            },
            Object {
              "amount": "89.00",
              "discount": null,
              "locale": "USD",
              "promo_start": Object {
                "date": "2019-03-31 00:00:00.000000",
                "timezone": "America/New_York",
                "timezone_type": 3,
              },
              "promo_stop": Array [],
              "saving": null,
            },
          ],
          "primary_format": true,
          "product_id": 393,
          "publisher": Object {
            "name": "NYU Press",
            "seo_name": "nyu-press",
          },
          "rating": null,
          "reference_id": null,
          "retailers": null,
          "reviews": Array [],
          "sale_date": Object {
            "date": "1992-06-01 00:00:00.000000",
            "timezone": "America/New_York",
            "timezone_type": 3,
          },
          "scheduled": Array [],
          "search_weight": 430,
          "season": null,
          "seo": "adventures-of-the-mind",
          "series": Array [
            Object {
              "number_in_series": "0",
              "series": Object {
                "description": "",
                "name": "The Cutting Edge: Lesbian Life and Literature Series",
                "seo_name": "the-cutting-edge-lesbian-life-and-literature-series",
              },
            },
          ],
          "sort_date": 707371200,
          "stock": null,
          "subtitle": "The Memoirs of Natalie Clifford Barney",
          "summary": "In this book, Barney explores her family tree, chronicles her friendships and associations through reprinted correspondence and recreated conversations, and evokes the golden age of her salon in...",
          "tagline": null,
          "territories": null,
          "title": "Adventures of the Mind",
          "title_id": "82c52cf3f3159afd0078fd9096d43bb4",
          "title_without_prefix": "Adventures of the Mind",
          "trim": Object {
            "depth": null,
            "height": "9.000",
            "unit": "in",
            "weight": "0.880",
            "weight_unit": "lb",
            "width": "6.000",
          },
          "type": "Nonfiction",
        },
      ],
      "catalogId": 10150,
    },
    "status": "success",
  },
}
`;

exports[`lib/supafolio/Supafolio.book should return a correct Book for 9780814725078 1`] = `
Book {
  "book": Object {
    "assets": Array [
      Object {
        "asset": Object {
          "description": null,
          "embed": null,
          "height": 648,
          "id": "1207",
          "name": "648-H-9780814725078.jpg",
          "order": 1,
          "path": "https://nyu-opensquare.imgix.net/missing-cover.jpg",
          "schedule": "2020-06-23 19:30:51",
          "size": null,
          "source": "s3-image-import",
          "sub_type": "book-cover",
          "type": "image",
          "unique": "a8914ada8bad55448df5726d885a522d",
          "width": null,
        },
        "asset_id": "1207",
        "id": "1207-393",
      },
      Object {
        "asset": Object {
          "description": null,
          "embed": null,
          "height": null,
          "id": "1165",
          "name": "145-W-9780814725078.jpg",
          "order": 1,
          "path": "https://nyu-opensquare.imgix.net/missing-cover.jpg",
          "schedule": "2020-06-23 19:30:51",
          "size": null,
          "source": "s3-image-import",
          "sub_type": "book-cover",
          "type": "image",
          "unique": "dd73da987b9eb946a2c159863e588657",
          "width": 145,
        },
        "asset_id": "1165",
        "id": "1165-393",
      },
      Object {
        "asset": Object {
          "description": null,
          "embed": null,
          "height": null,
          "id": "1186",
          "name": "298-W-9780814725078.jpg",
          "order": 1,
          "path": "https://nyu-opensquare.imgix.net/missing-cover.jpg",
          "schedule": "2020-06-23 19:30:51",
          "size": null,
          "source": "s3-image-import",
          "sub_type": "book-cover",
          "type": "image",
          "unique": "93431ff324b214bf02464c601ab5336a",
          "width": 298,
        },
        "asset_id": "1186",
        "id": "1186-393",
      },
    ],
    "availability": 4,
    "availability_status": "Active",
    "awards": Array [],
    "categories": Array [
      Object {
        "category": Object {
          "code": "NYUWGS000",
          "code_3": "NYU",
          "code_6": "NYUWGS",
          "name": "Women's & Gender Studies",
          "seo_name": "NYUWGS",
          "type": "nyuos-subjects",
        },
        "primary": false,
      },
      Object {
        "category": Object {
          "code": "NYULLS000",
          "code_3": "NYU",
          "code_6": "NYULLS",
          "name": "Literature & Literary Studies",
          "seo_name": "NYULLS",
          "type": "nyuos-subjects",
        },
        "primary": false,
      },
      Object {
        "category": Object {
          "code": "NYUS00000",
          "code_3": "NYU",
          "code_6": "NYUS00",
          "name": "Sociology",
          "seo_name": "NYUS",
          "type": "nyuos-subjects",
        },
        "primary": false,
      },
    ],
    "cd_run_time": "0:0:0",
    "contributors": Array [
      Object {
        "contributor": Object {
          "bio": null,
          "bio_short": null,
          "contributor_id": 100042,
          "custom": null,
          "deceased": false,
          "featured": false,
          "first": "Natalie Clifford",
          "hide": false,
          "image": null,
          "last": "Barney",
          "locale": null,
          "name": "Natalie Clifford Barney",
          "on_tour": false,
          "reference_id": null,
          "role": "A01",
          "sensitivity": false,
          "seo": "natalie-clifford-barney",
        },
        "contributor_id": 100042,
        "note": "Natalie Clifford Barney",
        "order": 1,
        "role": Object {
          "code": "A01",
          "name": "By (author)",
        },
        "role_id": "A01",
      },
      Object {
        "contributor": Object {
          "bio": "Translator <b>John Spalding Gatton</b> is Assistant Professor in the Department of English at Bellarmine College.",
          "bio_short": null,
          "contributor_id": 100043,
          "custom": null,
          "deceased": false,
          "featured": false,
          "first": "John Spalding",
          "hide": false,
          "image": null,
          "last": "Gatton",
          "locale": null,
          "name": "John Spalding Gatton",
          "on_tour": false,
          "reference_id": null,
          "role": "B06",
          "sensitivity": false,
          "seo": "john-spalding-gatton",
        },
        "contributor_id": 100043,
        "note": "",
        "order": 2,
        "role": Object {
          "code": "B06",
          "name": "Translated by",
        },
        "role_id": "B06",
      },
    ],
    "custom": Object {
      "cs_title_group": "9780814725078",
      "edition_isbn": "9780814725078",
      "hi_res_images": false,
      "language": "eng",
      "license_link": "https://creativecommons.org/licenses/by-nc-sa/4.0/",
      "license_name": "Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License",
      "open_access_is_downloadable": false,
      "open_access_series": false,
      "permanent_url": "https://doi.org/10.18574/nyu/9780814725078.001.0001",
      "scheduled_date": "05/29/2014",
      "video": false,
    },
    "date": Object {
      "date": "1992-06-01 00:00:00.000000",
      "timezone": "America/New_York",
      "timezone_type": 3,
    },
    "description": "<p>In this book, Barney explores her family tree, chronicles her friendships and associations through reprinted correspondence and recreated conversations, and evokes the golden age of her salon in  gallery of literary portraits.</p>",
    "division": null,
    "edition": "",
    "featured": false,
    "formats": Array [
      Object {
        "date": Object {
          "date": "1992-06-01 00:00:00.000000",
          "timezone": "America/New_York",
          "timezone_type": 3,
        },
        "detail": "Print PDF",
        "edition": "",
        "format": Object {
          "code": "BB",
          "name": "Hardcover",
        },
        "format_id": "BB",
        "id": "BB393",
        "isbn": "9780814725078",
        "primary_format": true,
        "product_id": 393,
        "seo_link": "adventures-of-the-mind",
        "title_id": "82c52cf3f3159afd0078fd9096d43bb4",
      },
      Object {
        "date": Object {
          "date": "1992-06-01 00:00:00.000000",
          "timezone": "America/New_York",
          "timezone_type": 3,
        },
        "detail": "",
        "edition": "",
        "format": Object {
          "code": "DG",
          "name": "eBook",
        },
        "format_id": "DG",
        "id": "DG400",
        "isbn": "9780814787281",
        "primary_format": false,
        "product_id": 400,
        "seo_link": "adventures-of-the-mind",
        "title_id": "82c52cf3f3159afd0078fd9096d43bb4",
      },
      Object {
        "date": Object {
          "date": "1992-06-01 00:00:00.000000",
          "timezone": "America/New_York",
          "timezone_type": 3,
        },
        "detail": "",
        "edition": "",
        "format": Object {
          "code": "DG",
          "name": "eBook",
        },
        "format_id": "DG",
        "id": "DG401",
        "isbn": "9780814725078",
        "primary_format": false,
        "product_id": 401,
        "seo_link": "adventures-of-the-mind",
        "title_id": "82c52cf3f3159afd0078fd9096d43bb4",
      },
    ],
    "hide": 0,
    "illustrations_note": "",
    "image": "https://nyu-opensquare.imgix.net/missing-cover.jpg",
    "import_notes": "",
    "imprint": Object {
      "description": null,
      "description_short": null,
      "hide": false,
      "name": "NYU Press",
      "seo_name": "nyu-press",
    },
    "initial_print_run": null,
    "isbn10": "0814711774",
    "isbn13": "9780814725078",
    "keywords": "",
    "levels": Array [],
    "pages": 308,
    "prices": Array [
      Object {
        "amount": "74.00",
        "discount": null,
        "locale": "GBP",
        "promo_start": Array [],
        "promo_stop": Array [],
        "saving": null,
      },
      Object {
        "amount": "89.00",
        "discount": null,
        "locale": "USD",
        "promo_start": Object {
          "date": "2019-03-31 00:00:00.000000",
          "timezone": "America/New_York",
          "timezone_type": 3,
        },
        "promo_stop": Array [],
        "saving": null,
      },
    ],
    "primary_format": true,
    "product_id": 393,
    "publisher": Object {
      "name": "NYU Press",
      "seo_name": "nyu-press",
    },
    "rating": null,
    "reference_id": null,
    "retailers": null,
    "reviews": Array [],
    "sale_date": Object {
      "date": "1992-06-01 00:00:00.000000",
      "timezone": "America/New_York",
      "timezone_type": 3,
    },
    "scheduled": Array [],
    "search_weight": 430,
    "season": null,
    "seo": "adventures-of-the-mind",
    "series": Array [
      Object {
        "number_in_series": "0",
        "series": Object {
          "description": "",
          "name": "The Cutting Edge: Lesbian Life and Literature Series",
          "seo_name": "the-cutting-edge-lesbian-life-and-literature-series",
        },
      },
    ],
    "sort_date": 707371200,
    "stock": null,
    "subtitle": "The Memoirs of Natalie Clifford Barney",
    "summary": "In this book, Barney explores her family tree, chronicles her friendships and associations through reprinted correspondence and recreated conversations, and evokes the golden age of her salon in...",
    "tagline": null,
    "territories": null,
    "title": "Adventures of the Mind",
    "title_id": "82c52cf3f3159afd0078fd9096d43bb4",
    "title_without_prefix": "Adventures of the Mind",
    "trim": Object {
      "depth": null,
      "height": "9.000",
      "unit": "in",
      "weight": "0.880",
      "weight_unit": "lb",
      "width": "6.000",
    },
    "type": "Nonfiction",
  },
  "supafolioApiResponse": Object {
    "data": Object {
      "book": Array [
        Object {
          "assets": Array [
            Object {
              "asset": Object {
                "description": null,
                "embed": null,
                "height": 648,
                "id": "1207",
                "name": "648-H-9780814725078.jpg",
                "order": 1,
                "path": "https://nyu-opensquare.imgix.net/missing-cover.jpg",
                "schedule": "2020-06-23 19:30:51",
                "size": null,
                "source": "s3-image-import",
                "sub_type": "book-cover",
                "type": "image",
                "unique": "a8914ada8bad55448df5726d885a522d",
                "width": null,
              },
              "asset_id": "1207",
              "id": "1207-393",
            },
            Object {
              "asset": Object {
                "description": null,
                "embed": null,
                "height": null,
                "id": "1165",
                "name": "145-W-9780814725078.jpg",
                "order": 1,
                "path": "https://nyu-opensquare.imgix.net/missing-cover.jpg",
                "schedule": "2020-06-23 19:30:51",
                "size": null,
                "source": "s3-image-import",
                "sub_type": "book-cover",
                "type": "image",
                "unique": "dd73da987b9eb946a2c159863e588657",
                "width": 145,
              },
              "asset_id": "1165",
              "id": "1165-393",
            },
            Object {
              "asset": Object {
                "description": null,
                "embed": null,
                "height": null,
                "id": "1186",
                "name": "298-W-9780814725078.jpg",
                "order": 1,
                "path": "https://nyu-opensquare.imgix.net/missing-cover.jpg",
                "schedule": "2020-06-23 19:30:51",
                "size": null,
                "source": "s3-image-import",
                "sub_type": "book-cover",
                "type": "image",
                "unique": "93431ff324b214bf02464c601ab5336a",
                "width": 298,
              },
              "asset_id": "1186",
              "id": "1186-393",
            },
          ],
          "availability": 4,
          "availability_status": "Active",
          "awards": Array [],
          "categories": Array [
            Object {
              "category": Object {
                "code": "NYUWGS000",
                "code_3": "NYU",
                "code_6": "NYUWGS",
                "name": "Women's & Gender Studies",
                "seo_name": "NYUWGS",
                "type": "nyuos-subjects",
              },
              "primary": false,
            },
            Object {
              "category": Object {
                "code": "NYULLS000",
                "code_3": "NYU",
                "code_6": "NYULLS",
                "name": "Literature & Literary Studies",
                "seo_name": "NYULLS",
                "type": "nyuos-subjects",
              },
              "primary": false,
            },
            Object {
              "category": Object {
                "code": "NYUS00000",
                "code_3": "NYU",
                "code_6": "NYUS00",
                "name": "Sociology",
                "seo_name": "NYUS",
                "type": "nyuos-subjects",
              },
              "primary": false,
            },
          ],
          "cd_run_time": "0:0:0",
          "contributors": Array [
            Object {
              "contributor": Object {
                "bio": null,
                "bio_short": null,
                "contributor_id": 100042,
                "custom": null,
                "deceased": false,
                "featured": false,
                "first": "Natalie Clifford",
                "hide": false,
                "image": null,
                "last": "Barney",
                "locale": null,
                "name": "Natalie Clifford Barney",
                "on_tour": false,
                "reference_id": null,
                "role": "A01",
                "sensitivity": false,
                "seo": "natalie-clifford-barney",
              },
              "contributor_id": 100042,
              "note": "Natalie Clifford Barney",
              "order": 1,
              "role": Object {
                "code": "A01",
                "name": "By (author)",
              },
              "role_id": "A01",
            },
            Object {
              "contributor": Object {
                "bio": "Translator <b>John Spalding Gatton</b> is Assistant Professor in the Department of English at Bellarmine College.",
                "bio_short": null,
                "contributor_id": 100043,
                "custom": null,
                "deceased": false,
                "featured": false,
                "first": "John Spalding",
                "hide": false,
                "image": null,
                "last": "Gatton",
                "locale": null,
                "name": "John Spalding Gatton",
                "on_tour": false,
                "reference_id": null,
                "role": "B06",
                "sensitivity": false,
                "seo": "john-spalding-gatton",
              },
              "contributor_id": 100043,
              "note": "",
              "order": 2,
              "role": Object {
                "code": "B06",
                "name": "Translated by",
              },
              "role_id": "B06",
            },
          ],
          "custom": Object {
            "cs_title_group": "9780814725078",
            "edition_isbn": "9780814725078",
            "hi_res_images": false,
            "language": "eng",
            "license_link": "https://creativecommons.org/licenses/by-nc-sa/4.0/",
            "license_name": "Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License",
            "open_access_is_downloadable": false,
            "open_access_series": false,
            "permanent_url": "https://doi.org/10.18574/nyu/9780814725078.001.0001",
            "scheduled_date": "05/29/2014",
            "video": false,
          },
          "date": Object {
            "date": "1992-06-01 00:00:00.000000",
            "timezone": "America/New_York",
            "timezone_type": 3,
          },
          "description": "<p>In this book, Barney explores her family tree, chronicles her friendships and associations through reprinted correspondence and recreated conversations, and evokes the golden age of her salon in  gallery of literary portraits.</p>",
          "division": null,
          "edition": "",
          "featured": false,
          "formats": Array [
            Object {
              "date": Object {
                "date": "1992-06-01 00:00:00.000000",
                "timezone": "America/New_York",
                "timezone_type": 3,
              },
              "detail": "Print PDF",
              "edition": "",
              "format": Object {
                "code": "BB",
                "name": "Hardcover",
              },
              "format_id": "BB",
              "id": "BB393",
              "isbn": "9780814725078",
              "primary_format": true,
              "product_id": 393,
              "seo_link": "adventures-of-the-mind",
              "title_id": "82c52cf3f3159afd0078fd9096d43bb4",
            },
            Object {
              "date": Object {
                "date": "1992-06-01 00:00:00.000000",
                "timezone": "America/New_York",
                "timezone_type": 3,
              },
              "detail": "",
              "edition": "",
              "format": Object {
                "code": "DG",
                "name": "eBook",
              },
              "format_id": "DG",
              "id": "DG400",
              "isbn": "9780814787281",
              "primary_format": false,
              "product_id": 400,
              "seo_link": "adventures-of-the-mind",
              "title_id": "82c52cf3f3159afd0078fd9096d43bb4",
            },
            Object {
              "date": Object {
                "date": "1992-06-01 00:00:00.000000",
                "timezone": "America/New_York",
                "timezone_type": 3,
              },
              "detail": "",
              "edition": "",
              "format": Object {
                "code": "DG",
                "name": "eBook",
              },
              "format_id": "DG",
              "id": "DG401",
              "isbn": "9780814725078",
              "primary_format": false,
              "product_id": 401,
              "seo_link": "adventures-of-the-mind",
              "title_id": "82c52cf3f3159afd0078fd9096d43bb4",
            },
          ],
          "hide": 0,
          "illustrations_note": "",
          "image": "https://nyu-opensquare.imgix.net/missing-cover.jpg",
          "import_notes": "",
          "imprint": Object {
            "description": null,
            "description_short": null,
            "hide": false,
            "name": "NYU Press",
            "seo_name": "nyu-press",
          },
          "initial_print_run": null,
          "isbn10": "0814711774",
          "isbn13": "9780814725078",
          "keywords": "",
          "levels": Array [],
          "pages": 308,
          "prices": Array [
            Object {
              "amount": "74.00",
              "discount": null,
              "locale": "GBP",
              "promo_start": Array [],
              "promo_stop": Array [],
              "saving": null,
            },
            Object {
              "amount": "89.00",
              "discount": null,
              "locale": "USD",
              "promo_start": Object {
                "date": "2019-03-31 00:00:00.000000",
                "timezone": "America/New_York",
                "timezone_type": 3,
              },
              "promo_stop": Array [],
              "saving": null,
            },
          ],
          "primary_format": true,
          "product_id": 393,
          "publisher": Object {
            "name": "NYU Press",
            "seo_name": "nyu-press",
          },
          "rating": null,
          "reference_id": null,
          "retailers": null,
          "reviews": Array [],
          "sale_date": Object {
            "date": "1992-06-01 00:00:00.000000",
            "timezone": "America/New_York",
            "timezone_type": 3,
          },
          "scheduled": Array [],
          "search_weight": 430,
          "season": null,
          "seo": "adventures-of-the-mind",
          "series": Array [
            Object {
              "number_in_series": "0",
              "series": Object {
                "description": "",
                "name": "The Cutting Edge: Lesbian Life and Literature Series",
                "seo_name": "the-cutting-edge-lesbian-life-and-literature-series",
              },
            },
          ],
          "sort_date": 707371200,
          "stock": null,
          "subtitle": "The Memoirs of Natalie Clifford Barney",
          "summary": "In this book, Barney explores her family tree, chronicles her friendships and associations through reprinted correspondence and recreated conversations, and evokes the golden age of her salon in...",
          "tagline": null,
          "territories": null,
          "title": "Adventures of the Mind",
          "title_id": "82c52cf3f3159afd0078fd9096d43bb4",
          "title_without_prefix": "Adventures of the Mind",
          "trim": Object {
            "depth": null,
            "height": "9.000",
            "unit": "in",
            "weight": "0.880",
            "weight_unit": "lb",
            "width": "6.000",
          },
          "type": "Nonfiction",
        },
      ],
      "catalogId": 10150,
    },
    "status": "success",
  },
}
`;
